Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.2
-
macOS 12.1
-
-
6dbe45c96a (qt/qtbase/dev) 6dbe45c96a (qt/tqtc-qtbase/dev) e8a7b3da0b (qt/qtbase/6.3) e8a7b3da0b (qt/tqtc-qtbase/6.3) 7ea9a6f3ad (qt/qtbase/6.4) 7ea9a6f3ad (qt/tqtc-qtbase/6.4)
Description
When including third party library such as ffmpeg dynamic library, macdeployqt does change the paths for the application so that it references the ffmpeg library inside the frameworks folder and move the library into the frameworks folder.
However, macdeployqt does not run the install_name_tool command on the ffmpeg library to resolve its internal dependencies. Running otool on the deployed ffmpeg library shows it points to the original location.
Hence, the application cannot find the deployed ffmpeg library and crashes with
"(no such file)Library not loaded".
Attachments
For Gerrit Dashboard: QTBUG-100093 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
416537,1 | macdeployqt: macdeployqt process some libraries(e.g. ffmpeg) incorrect | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
405490,6 | macdeployqt: macdeployqt process some libraries(e.g. ffmpeg) incorrect | dev | qt/qtbase | Status: MERGED | +2 | 0 |
416492,2 | macdeployqt: macdeployqt process some libraries(e.g. ffmpeg) incorrect | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
416493,2 | macdeployqt: macdeployqt process some libraries(e.g. ffmpeg) incorrect | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |