macdeployqt: macdeployqt process some libraries(e.g. ffmpeg) incorrect

ffmpeg and nettle are different from other libraries, they use symbol
link as their inner module dependencies. Calling one more
install_name_tool can handle this case.

Fixes: QTBUG-100093
Change-Id: I12cdd53bd5aa3120910070ba283178686deb3eb0
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 6dbe45c96a6b807cfc19c34cf2833504148d019f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>